2011-12-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxconfig01/init.c: Create more objects.

2011-12-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psx07/init.c: Remove unused var "clock_allowed".

2011-12-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Check for getrusage decl.
	* psxgetrusage01/init.c:
	Fix header file inclusion order.
	Move configuration section up.
	Apply HAVE_DECL_GETRUSAGE.

2011-12-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxconfig01/init.c: Fix due to alignment issue.

2011-12-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxconfig01/.cvsignore, psxconfig01/Makefile.am, psxconfig01/init.c,
	psxconfig01/psxconfig01.doc, psxconfig01/psxconfig01.scn: New files.
	* Makefile.am, configure.ac: Reflect changes above.

2011-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1589/build
	* psx01/Makefile.am, psx02/Makefile.am, psx03/Makefile.am,
	psx04/Makefile.am, psx05/Makefile.am, psx06/Makefile.am,
	psx07/Makefile.am, psx08/Makefile.am, psx09/Makefile.am,
	psx10/Makefile.am, psx11/Makefile.am, psx12/Makefile.am,
	psx13/Makefile.am, psx14/Makefile.am, psx15/Makefile.am,
	psx16/Makefile.am, psxaio01/Makefile.am, psxaio02/Makefile.am,
	psxaio03/Makefile.am, psxalarm01/Makefile.am,
	psxautoinit01/Makefile.am, psxautoinit02/Makefile.am,
	psxbarrier01/Makefile.am, psxcancel/Makefile.am,
	psxcancel01/Makefile.am, psxchroot01/Makefile.am,
	psxclassic01/Makefile.am, psxcleanup/Makefile.am,
	psxcleanup01/Makefile.am, psxclock/Makefile.am,
	psxcond01/Makefile.am, psxeintr_join/Makefile.am,
	psxenosys/Makefile.am, psxfatal01/Makefile.am,
	psxfatal02/Makefile.am, psxfchx01/Makefile.am, psxfile01/Makefile.am,
	psxfile02/Makefile.am, psxfilelock01/Makefile.am,
	psxgetrusage01/Makefile.am, psxid01/Makefile.am,
	psximfs01/Makefile.am, psximfs02/Makefile.am,
	psxintrcritical01/Makefile.am, psxitimer/Makefile.am,
	psxkey01/Makefile.am, psxkey02/Makefile.am, psxkey03/Makefile.am,